feat: implement and test delete endpoint
