# src/main/resources/openapi/doc.yaml
@@ -26,7 +26,6 @@ paths:
   /schema/collection/create:
     post:
       summary: Create a new collection
-      operationId: createCollection
       parameters:
         - $ref: '#/components/parameters/XStableEventId'
         - $ref: '#/components/parameters/XStableEventCreated'
@@ -44,11 +43,12 @@ paths:
           description: Invalid request payload
         '401':
           description: Unauthorized
+        '409':
+          description: Conflict, event-id already processed
 
-  /schema/update.collection:
+  /schema/collection/update:
     post:
       summary: Update an existing collection
-      operationId: updateCollection
       parameters:
         - $ref: '#/components/parameters/XStableEventId'
         - $ref: '#/components/parameters/XStableEventCreated'
@@ -68,6 +68,33 @@ paths:
           description: Unauthorized
         '404':
           description: Collection not found
+        '409':
+          description: Conflict, event-id already processed
+
+  /schema/collection/delete:
+    post:
+      summary: Deletes an existing collection
+      parameters:
+        - $ref: '#/components/parameters/XStableEventId'
+        - $ref: '#/components/parameters/XStableEventCreated'
+      requestBody:
+        description: Payload for deleting an existing collection
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: './schemas/collection/delete.json'
+      responses:
+        '200':
+          description: Collection updated successfully
+        '400':
+          description: Invalid request payload
+        '401':
+          description: Unauthorized
+        '404':
+          description: Collection not found
+        '409':
+          description: Conflict, event-id already processed
 
 components:
   schemas: {}
